##############################################################################
# Spectral Python (SPy) package change log
##############################################################################

2013-08-06	tboggs <tboggs@users.sourceforge.net>

    Renamed `get_image_display_data` to `get_rgb` and avoid exception due
    to missing attributes in ImageArray objects.

    * graphics/__init__.py: import get_rgb
    * graphics/graphics.py:
      (view): get_image_display_data renamed get_rgb.
      (make_pil_image): Ditto.
      (get_image_display_data):
      - Renamed get_rgb.
      - Handle ImageArray object with missing attributes.
      - Deprecate colorScale and autoScale kwargs.
    * graphics/spywxpython.py (view):
      - get_image_display_data renamed get_rgb.
      - Replace oldnumeric imports.

2013-08-04	tboggs <tboggs@users.sourceforge.net>

    Enable setting custom background color in hypercube window.

    * graphics/graphics.py (view_cube): Include `background` in doc string.
    * graphics/hypercube.py (HypercubeWindow.__init__): Set self.clear_color
      based on keyword arg, if provided.

    * spectral/spectral.py (help): Removed legacy help function.

2013-07-24	tboggs <tboggs@users.sourceforge.net>

    * algorithms/detectors.py (RX.__init__): Initialize background.

2013-04-14	tboggs <tboggs@users.sourceforge.net>

    * io/envi.py (create_image): Applied Ferdinand Deger's bug fix patch.

2013-03-30	tboggs <tboggs@users.sourceforge.net>

    * __init__.py: Updated SPy version to 0.11

2013-03-20	tboggs <tboggs@users.sourceforge.net>

    Added unit-testing sub-package.

    * tests/__init__.py: New file.
    * tests/run.py: New file to execute all standard unit tests.
    * tests/spyfile.py: New file for testing SpyFile I/O.
    * tests/spytest.py: New file with base class for unit tests.
    * tests/transforms.py: New file for testing LinearTransform objects.

    Changed envi.save option from `byteswap` to `byteorder`.
